fixing overflow for mobile devices

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -277,10 +277,10 @@ width: 20%;
 }
 @media only screen and (max-width: 599px) {
   body {
-    overflow: hidden;
+    overflow-x: hidden;
   }
 .container2{
-  width: 100%;
+  width: 500px;
 }
 .content{
   display: flex;
